--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,16 +42,14 @@ find_package(PNG REQUIRED)
 #find_package(OpenCL REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_FLAGS "-W -Wall")
+set(CMAKE_CXX_FLAGS "-W -Wall -g")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native -s")
 
 
 include_directories(lib/include)
 
-# add_library(renderer src/render.hpp src/render_solution.cpp)  # version prof
-add_library(renderer src/render.hpp src/render.cpp)  # version etudiant
+add_library(renderer src/render_cpu.hpp src/render_cpu.cpp src/render_gpu.hpp src/render_gpu.cpp)  # version etudiant
 target_link_libraries(renderer)
-#target_compile_definitions(renderer PRIVATE KERNEL_SOURCE_FILE=${CMAKE_SOURCE_DIR}/src/mandel_solution.cl)  # version prof
 target_compile_definitions(renderer PRIVATE KERNEL_SOURCE_FILE=${CMAKE_SOURCE_DIR}/src/mandel_etu.cl)  # version etudiant
 
 add_executable(mandel src/mandel.cpp)
