EDT - adding CUDA properties to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,17 +39,20 @@ endif()
 
 
 find_package(PNG REQUIRED)
-#find_package(OpenCL REQUIRED)
+find_package(CUDA REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_FLAGS "-W -Wall -g")
 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -march=native -s")
+
+set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -std=c++17" )
 
 
 include_directories(lib/include)
 
 add_library(renderer src/render_cpu.hpp src/render_cpu.cpp src/render_gpu.hpp src/render_gpu.cpp)  # version etudiant
 target_link_libraries(renderer)
+set_target_properties(renderer PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 target_compile_definitions(renderer PRIVATE KERNEL_SOURCE_FILE=${CMAKE_SOURCE_DIR}/src/mandel_etu.cl)  # version etudiant
 
 add_executable(mandel src/mandel.cpp)
